# mongodb-backup-bot

./: Dockerfile  README.md  app.json  pyproject.toml
.github/workflows/: dependency-update.yml  update-deps.yml
src/: __init__.py  config.py
src/modules/: mongo.py  owner.py  start.py
src/modules/utils/: __init__.py  _get_db_list.py  _mongo.py
