[build-system]
requires = [
    "setuptools>=78.1.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "dbbackup"
version = "0.1.0"
description = "A Telegram Bot for MongoDB Backup/Import"
requires-python = ">=3.10"
dependencies = [
    "pymongo>=4.16.0",
    "pytdbot>=0.10.0.dev0",
    "python-dotenv>=1.2.1",
    "tdjson>=1.8.62",
]

[project.scripts]
start = "src.__main__:main"

[tool.setuptools]
packages = [
    "src",
]
